tests/ui/consts/mono-reachable-invalid-const.stderr
error[E0080]: index out of bounds: the length is 1 but the index is 1
  --> $DIR/mono-reachable-invalid-const.rs:9:9
   |
LL |         ["oops"][b];
   |         ^^^^^^^^^^^ evaluation of `Bar::<0>::ASSERT` failed here

note: erroneous constant encountered
  --> $DIR/mono-reachable-invalid-const.rs:14:19
   |
LL |         let val = Self::ASSERT;
   |                   ^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn Bar::<0>::assert`
  --> $DIR/mono-reachable-invalid-const.rs:22:5
   |
LL |     Bar::<0>::assert();
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
